build before hand so the types are picked up -_____-

--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -11,6 +11,7 @@ jobs:
     displayName: '🧶 ESLint'
     steps:
     - template: install-node.yaml
+    - script: build.cmd
     - bash: |
         npm install eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --reg https://registry.npmjs.org/ --save-dev --verbose
         npm run lint
