--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -97,6 +97,14 @@
 				"dotnetAcquisitionExtension.proxyUrl": {
 					"type": "string",
 					"description": "URL to a proxy if you use one, such as: https://proxy:port"
+				},
+				"dotnetAcquisitionExtension.disableExistingPathWarning": {
+					"type": "boolean",
+					"description": "If you'd like to disable the warning message about a potentially invalid existing .NET path, set this to true."
+				},
+                "dotnetAcquisitionExtension.allowInvalidPaths": {
+					"type": "boolean",
+					"description": "If you'd like to continue using a .NET path that is not meant to be used for an extension and may cause instability (please read above about the existingDotnetPath setting) then set this to true."
 				}
 			}
 		}
