Migrate to ESLint (#1944)
* get eslint running but its failing a lot of checks

* Fix the linting after migration

* Fix many errors

* 65 errors to go

* fix almost every lint issue

* clean lint

* Remove references to tslint

* dont install eslint as it is already here

* install eslint

* update eslint

* dont empty cache because eslint is failing to register the types that exist

* try to help eslint find the files for type defs

* Set typescript resolver

* Fix imports

* Add some import plugin but still cant import vscode correctly

* install eslint globally

* skip npm installl

* add imports

* try to fix the import issue

* build before hand so the types are picked up -_____-

* Revert "build before hand so the types are picked up -_____-"

This reverts commit e5381b42dfb9a319283fb101bac0cd2f6adcc273.

* rollback to eslint 8 but still run build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,14 @@
         "REGTYPE",
         "Republisher"
     ],
-    "azure-pipelines.1ESPipelineTemplatesSchemaFile": true
+    "azure-pipelines.1ESPipelineTemplatesSchemaFile": true,
+    "eslint.options": {
+        "configFile": ".eslintrc.js"
+    },
+    "eslint.workingDirectories": [
+        "./vscode-dotnet-runtime-library",
+        "./vscode-dotnet-runtime-extension",
+        "./vscode-dotnet-sdk-extension",
+        "./sample"
+      ]
 }
