--- a/package.json
+++ b/package.json
@@ -11,14 +11,26 @@
 	"author": "Microsoft Corporation",
 	"scripts": {
 		"compile-all": "build.cmd",
-		"lint": "tslint -c tslint.json 'vscode-dotnet-runtime-library/src/**/*.ts' 'vscode-dotnet-runtime-extension/src/**/*.ts' 'vscode-dotnet-sdk-extension/src/**/*.ts'"
+		"lint": "eslint -c .eslintrc.js --ext=.ts vscode-dotnet-runtime-library/src/**/*.ts vscode-dotnet-runtime-extension/src/**/*.ts --ignore-pattern \"**/test/\" --fix"
 	},
 	"dependencies": {
+		"@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
 		"@vscode/vsce": "^2.26.1",
+		"eslint": "^8.0.0",
+		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-plugin-import": "^2.30.0",
+		"eslint-plugin-jsdoc": "^50.2.2",
+		"eslint-plugin-prefer-arrow": "^1.2.3",
+		"tslint": "^6.1.3",
 		"typescript": "^5.5.4"
 	},
 	"devDependencies": {
 		"@types/source-map-support": "^0.5.6",
+		"@typescript-eslint/eslint-plugin": "^8.0.0",
+		"@typescript-eslint/parser": "^8.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-node": "^0.3.9",
+		"eslint-plugin-prettier": "^5.2.1",
 		"rimraf": "3.0.2"
 	}
 }
