--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -2,17 +2,17 @@ parameters:
   pool: ''
 
 jobs:
-  - job: TSLint
+  - job: ESLint
     pool:
       ${{ if eq(parameters.useOneEngineeringPool, 'true') }}:
         ${{ parameters.pool }}
       ${{ else }}:
         vmImage: ${{ parameters.pool.vmImage }}
-    displayName: '🧶 TSLint'
+    displayName: '🧶 ESLint'
     steps:
     - template: install-node.yaml
+    - script: build.cmd
     - bash: |
-        npm install --cache /temp/empty-cache
-        npm install tslint --reg https://registry.npmjs.org/ --verbose
+        npm install eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --reg https://registry.npmjs.org/ --save-dev --verbose
         npm run lint
       displayName: 🧶 Run Lint
