--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -52,7 +52,7 @@
 				"category": ".NET Install Tool",
 				"enablement": "!dotnetAcquisitionExtension.isGlobalSDKUnsupported"
 			},
-            {
+			{
 				"command": "dotnet.uninstallPublic",
 				"title": "Uninstall .NET.",
 				"category": ".NET Install Tool"
@@ -113,6 +113,7 @@
 	},
 	"dependencies": {
 		"@types/chai-as-promised": "^7.1.8",
+		"@vscode/extension-telemetry": "^0.9.7",
 		"@vscode/test-electron": "^2.3.9",
 		"axios": "^1.7.4",
 		"axios-cache-interceptor": "^1.0.1",
