--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -11,7 +11,7 @@
 	"author": "Microsoft Corporation",
 	"displayName": ".NET Install Tool",
 	"description": "This extension installs and manages different versions of the .NET SDK and Runtime.",
-	"appInsightsKey": "02dc18e0-7494-43b2-b2a3-18ada5fcb522",
+	"connectionString": "InstrumentationKey=02dc18e0-7494-43b2-b2a3-18ada5fcb522;IngestionEndpoint=https://westus2-0.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/;ApplicationId=e8e56970-a18a-4101-b7d1-1c5dd7c29eeb",
 	"icon": "images/dotnetIcon.png",
 	"version": "2.1.6",
 	"publisher": "ms-dotnettools",
