--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -4,13 +4,23 @@ parameters:
   version: ''
 
 jobs:
-  # Note: This step requires approval, allows for manual smoke testing the artifact before release
+  - job: waitForValidation
+    displayName: ☁️ Wait for release approval
+    pool: server
+    timeoutInMinutes: 4320 # job times out in 3 days
+    steps:
+    - task: ManualValidation@0
+      timeoutInMinutes: 4320
+      inputs:
+        instructions: 'Please validate that the release build has been tested, and resume to publish a new version'
+        onTimeout: 'reject'
   - deployment: Deploy
     pool:
       vmImage: ${{ parameters.pool.vmImage }}
     displayName: '✨ Deploy to Release Environment'
     dependsOn:
     - ${{ parameters.pool.os }}_Package
+    - waitForValidation
     environment: 'vscode-dotnetcore-extension-releases'
   - job: Publish
     pool:
