--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -47,7 +47,8 @@ jobs:
         workingDirectory: '$(System.ArtifactsDirectory)'
         inlineScript: |
           npm install @vscode/vsce@latest -g --reg https://registry.npmjs.org/ --verbose
-          $basePublishArgs = , "publish --azure-credential"
+          $basePublishArgs = , "publish"
+          $basePublishArgs += '--azure-credential'
           $basePublishArgs += '--packagePath'
           $publishArgs = $basePublishArgs + vscode-dotnet-runtime-$(version)-signed.vsix
           If ("${{ parameters.SignType }}" -ne "Real") {
