--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -78,8 +78,9 @@ jobs:
       Contents: '**\*.binlog'
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
       flattenFolders: false
-- template: publish.yaml
-  parameters:
-    pool: ${{ parameters.pool }}
-    SignType: ${{ parameters.SignType }}
-    version: $(GetVersion.version)
+- ${{ if eq('${{ parameters.useOneEngineeringPool }}', 'true') }}:
+  - template: publish.yaml
+    parameters:
+      pool: ${{ parameters.pool }}
+      SignType: ${{ parameters.SignType }}
+      version: $(GetVersion.version)
