--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -16,7 +16,10 @@ jobs:
         onTimeout: 'reject'
   - deployment: Deploy
     pool:
-      vmImage: ${{ parameters.pool.vmImage }}
+      ${{ if eq(parameters.useOneEngineeringPool, 'true') }}:
+        ${{ parameters.pool }}
+      ${{ else }}:
+        vmImage: ${{ parameters.pool.vmImage }}
     displayName: '✨ Deploy to Release Environment'
     dependsOn:
     - ${{ parameters.pool.os }}_Package
