--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -39,12 +39,15 @@ parameters:
   - name: NetCore1ESPool-Internal
     image: 1es-ubuntu-2204
     os: linux
+    emoji: 🐧
   - name: Azure Pipelines
     image: macOS-latest
     os: macOS
+    emoji: 🐧
   - name: NetCore1ESPool-Internal
     image: 1es-windows-2022
     os: windows
+    emoji: 💣
 - name: SignType
   displayName: Sign type
   type: string
