Set 'use 1es pool' to true

--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -83,3 +83,4 @@ jobs:
       pool: ${{ parameters.pool }}
       SignType: ${{ parameters.SignType }}
       version: $(GetVersion.version)
+      useOneEngineeringPool: true
