Leverage Managed Identity Publish (#1942)
* add publish task

* move template out of steps and into jobs

* get rid of pool

* dont pass 1es pool

* add depends on chain

* use vsce latest

* run package on publi

* add approval step:

* vsixs are stored in the root, so don't check in the extension folder

* Switch to MI instead of a PAT

* Fix ps1 issue

* Only deploy on internal

* Use pool vs vmimage

* Try to fix pool condition

* Use a different pool

* Condition the name of the build based on OS

Why is windows the bomb emoji and not the windows emoji?
And why did I do this:

The windows build goes last because its in alphabetical order based on the behavior of how devops works. This is bad because it should go first and makes the other steps take longer as they depend on only the windows task. The bomb emoji is one of the first emojis thats not an emoticon before the penguin emoji so I picked that one..

* It's pretty silly you cant define a variable in a template but here we are

* Maybe it has to be in plaintext

* The deployment step is not necessary

* wait for wait job

* Set the emoji

* Move windows to the top

* Set 'use 1es pool' to true

* Switch to a different ordering so windows runs first, then linux

* try to fix bug where version is not passed and publish args is wrong

* Try to pass var into another job since we cant have a template in the jobs

* Revert "Try to pass var into another job since we cant have a template in the jobs"

This reverts commit 7bdf2dfec95f13f053bc016cb767be9257da744c.

* Try to condition the yamls omewhere else

* is yaml failing

* Revert "is yaml failing"

This reverts commit b014dd042fcc63972477a087033ae304c8639a14.

* Revert "Try to condition the yamls omewhere else"

This reverts commit 7ccb36f01c00634eed03098b65eaa0d4a5d72427.

* Revert "try to fix bug where version is not passed and publish args is wrong"

This reverts commit 592349be71605

--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -28,14 +28,17 @@ parameters:
   type: object
   default:
   - name: NetCore-Public
+    vmImage: windows-latest
+    os: windows
+    emoji: ⚪
+  - name: NetCore-Public
     vmImage: ubuntu-latest
     os: linux
+    emoji: 🟣
   - name: NetCore-Public
     vmImage: macOS-latest
     os: macOS
-  - name: NetCore-Public
-    vmImage: windows-latest
-    os: windows
+    emoji: ⚫
 
 stages:
 - stage: o # o is just used so it looks like a bullet point in the output of devops
@@ -46,6 +49,7 @@ stages:
         pool:
           vmImage: ${{ image.vmImage }}
           os: ${{ image.os }}
+          emoji: ${{ image.emoji }}
         useOneEngineeringPool: false
   - template: pipeline-templates/upstream-verify.yaml
     parameters:
@@ -65,3 +69,4 @@ stages:
         vmImage: windows-latest
         os: windows
       useOneEngineeringPool: false
+      SignType: Test
