--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -39,14 +39,17 @@ parameters:
   type: object
   default:
   - name: NetCore1ESPool-Internal
+    image: 1es-windows-2022
+    os: windows
+    emoji: ⚪
+  - name: NetCore1ESPool-Internal
     image: 1es-ubuntu-2204
     os: linux
+    emoji: 🟣
   - name: Azure Pipelines
     image: macOS-latest
     os: macOS
-  - name: NetCore1ESPool-Internal
-    image: 1es-windows-2022
-    os: windows
+    emoji: ⚫
 - name: SignType
   displayName: Sign type
   type: string
@@ -78,6 +81,7 @@ extends:
               name: ${{ image.name }}
               image: ${{ image.image }}
               os: ${{ image.os }}
+              emoji: ${{ image.emoji }}
             useOneEngineeringPool: true
       - template: pipeline-templates/upstream-verify.yaml@self
         parameters:
