Test for Vendors: Don't acquire 2.X ASPNET Runtimes
2.0, 2.1, etc were never available on the server hosting download files for .NET and we don't need to support that. This updates the sample test for vendors to run to use versions of aspnet that are supported so this test actually functions properly.

--- a/sample/package.json
+++ b/sample/package.json
@@ -53,7 +53,7 @@
 			},
 			{
 				"command": "sample.dotnet.concurrentASPNETTest",
-				"title": "Concurrently acquire all 2.X ASPNET Core runtimes",
+				"title": "Concurrently acquire ASPNET Core runtimes",
 				"category": "Sample"
 			},
 			{
