Don't add -signed
This appears to cause some issues with loading external libraries due to new signature checks (?) added in October

--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -62,7 +62,8 @@ jobs:
   - task: CmdLine@2
     displayName: 🤌 Rename Signed VSIX
     inputs:
-      script: rename ".\packages\$(package-name)-$(GetVersion.version).vsix" $(package-name)-$(GetVersion.version)-signed.vsix
+      script: rename "$(package-name)-$(GetVersion.version).vsix" $(package-name)-$(GetVersion.version)-unsigned.vsix
+    workingDirectory: $(dir-name)
   - task: CopyFiles@2
     displayName: '📩 Copy Artifact'
     inputs:
