--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -61,9 +61,8 @@ jobs:
       SignType: ${{ parameters.SignType }}
   - task: CmdLine@2
     displayName: 🤌 Rename Signed VSIX
-    workingDirectory: $(dir-name)
     inputs:
-      script: rename "$(package-name)-$(GetVersion.version).vsix" $(package-name)-$(GetVersion.version)-unsigned.vsix
+      script: rename "$(dir-name)/$(package-name)-$(GetVersion.version).vsix" $(dir-name)/$(package-name)-$(GetVersion.version)-unsigned.vsix
   - task: CopyFiles@2
     displayName: '📩 Copy Artifact'
     inputs:
