--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.22",
+		"@types/lodash": "^4.17.13",
 		"@types/proper-lockfile": "^4.1.2",
 		"glob": "^7.2.0"
 	},
@@ -47,6 +48,7 @@
 		"eol": "^0.9.1",
 		"get-proxy-settings": "^0.1.13",
 		"https-proxy-agent": "^7.0.4",
+		"lodash": "^4.17.21",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
 		"proper-lockfile": "^4.1.2",
