--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -30,15 +30,15 @@ parameters:
   - name: NetCore-Public
     vmImage: windows-latest
     os: windows
-    emoji: ⚪
+    emoji: 🪟
   - name: NetCore-Public
     vmImage: ubuntu-latest
     os: linux
-    emoji: 🟣
+    emoji: 🐧
   - name: NetCore-Public
     vmImage: macOS-latest
     os: macOS
-    emoji: ⚫
+    emoji: 🍎
 
 stages:
 - stage: o # o is just used so it looks like a bullet point in the output of devops
