--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -13,6 +13,6 @@ jobs:
     - template: install-node.yaml
     - script: build.cmd
     - bash: |
-        npm install eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --reg https://registry.npmjs.org/ --save-dev --verbose
+        npm i eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --save-dev --verbose
         npm run lint
       displayName: 🧶 Run Lint
