--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -47,8 +47,8 @@ jobs:
       parameters:
         SignType: ${{ parameters.SignType }}
   - bash: |
-      npm install rimraf --reg https://registry.npmjs.org/ --verbose
-      npm install @vscode/vsce@latest -g --reg https://registry.npmjs.org/ --verbose
+      npm install rimraf --verbose
+      npm install @vscode/vsce -g --verbose
       vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
       cp $(package-name)-$(GetVersion.version).vsix ../packages/$(package-name)-$(GetVersion.version).vsix
     displayName: 📦 Package Artifact
