Try installing -g and -l for separate components

--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -13,6 +13,7 @@ jobs:
     - template: install-node.yaml
     - script: build.cmd
     - bash: |
-        npm i --verbose eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0
+        npm i eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0
+        npm i -g eslint@^8.57.0 # eslint plugins do not work with -g. but for the package.json to call eslint on the cmd, we need that to be on -g.
         npm run lint
       displayName: 🧶 Run Lint
