Move Lint and Upstream Verification onto OSX
This will make it faster since more of those agents are available and also free up more of the high demand windows agents that are needed to run the windows leg.

--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -11,7 +11,7 @@ jobs:
     displayName: '🧶 ESLint'
     steps:
     - template: install-node.yaml
-    - script: build.cmd
+    - script: build.sh
     - bash: |
         npm i eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --save-dev
         npm run lint
