--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -86,16 +86,16 @@ extends:
       - template: pipeline-templates/upstream-verify.yaml@self
         parameters:
           pool:
-            name: NetCore1ESPool-Internal
-            image: 1es-windows-2022
-            os: windows
+            name: Azure Pipelines
+            image: macOS-latest
+            os: macOS
           useOneEngineeringPool: true
       - template: pipeline-templates/lint.yaml@self
         parameters:
           pool:
-            name: NetCore1ESPool-Internal
-            image: 1es-windows-2022
-            os: windows
+            name: Azure Pipelines
+            image: macOS-latest
+            os: macOS
           useOneEngineeringPool: true
       - template: pipeline-templates/package-vsix.yaml@self
         parameters:
