--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -54,14 +54,14 @@ stages:
   - template: pipeline-templates/upstream-verify.yaml
     parameters:
       pool:
-        vmImage: windows-latest
-        os: windows
+        vmImage: macOS-latest
+        os: macOS
       useOneEngineeringPool: false
   - template: pipeline-templates/lint.yaml
     parameters:
       pool:
-        vmImage: windows-latest
-        os: windows
+        vmImage: macOS-latest
+        os: macOS
       useOneEngineeringPool: false
   - template: pipeline-templates/package-vsix.yaml
     parameters:
