Leverage npm ci to lock the version
This is to hopefully prevent E401 from trying to update new versions onto the base from an unauth'd machine

--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -14,6 +14,6 @@ jobs:
     - script: ./build.sh
       displayName: 🐧 Build To Install Deps
     - bash: |
-        npm i eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --save-dev
+        npm ci eslint@^8.57.0 @typescript-eslint/parser@^8.0.0 @typescript-eslint/eslint-plugin@^8.0.0 --save-dev
         npm run lint
       displayName: 🧶 Run Lint
