Leverage Internal Feed for Further Dependencies (#2107)
* switch from public to intl

* Dont wait for eslint to package

* Try to install eslint global

* Remove rimraf from gitignore, it doesnt make sense why its there?

this shouldnt make any folder called rimraf

* add rimraf globally

* Dont install -g as -g doesnt work on eslint /shrug

* Try installing -g and -l for separate components

* use save-dev

* Call npx to run eslint local as global since global cant resolve local packages well

* Tell NPX to use eslint that supports TS

* Move Lint and Upstream Verification onto OSX

This will make it faster since more of those agents are available and also free up more of the high demand windows agents that are needed to run the windows leg.

* Fix build

* Leverage npm ci to lock the version

This is to hopefully prevent E401 from trying to update new versions onto the base from an unauth'd machine

* Remove batch true

This is so multiple commits can run PRs at the same time. This has been turned on for a long time and I'm not sure why it was.

Thank you @miyanni for helping figure this out, it was a weird an unexpected thing to dig through from the initial problem set.

--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -2,7 +2,6 @@
 # URL: https://dev.azure.com/dnceng-public/public/_build?definitionId=60
 
 trigger:
-  batch: true
   branches:
     include:
     - main
@@ -54,14 +53,14 @@ stages:
   - template: pipeline-templates/upstream-verify.yaml
     parameters:
       pool:
-        vmImage: windows-latest
-        os: windows
+        vmImage: macOS-latest
+        os: macOS
       useOneEngineeringPool: false
   - template: pipeline-templates/lint.yaml
     parameters:
       pool:
-        vmImage: windows-latest
-        os: windows
+        vmImage: macOS-latest
+        os: macOS
       useOneEngineeringPool: false
   - template: pipeline-templates/package-vsix.yaml
     parameters:
